# spark-bazel-k8s-demo

./: .bazelproject  .gitignore  BUILD  WORKSPACE
docs/: minikube-rbac.yaml  setup_ubuntu.md
spark/: BUILD  apply-spark-rbac.sh  entrypoint.sh  k8s-spark-submit.tpl.sh  k8s.bzl  rbac.yaml  repositories.bzl
src/main/scala/com/example/hello/: BUILD  HelloTest.scala  hello-deployment.yaml
src/main/scala/com/example/periodicpi/: BUILD.bazel  Main.scala  launch.sh  periodicpi-cronjob.yaml
src/main/scala/com/example/sparkstreamtest/: BUILD  SparkStreamtest.scala  log4j.properties
src/main/scala/com/example/templatetest/: BUILD.bazel  Main.scala  launch.sh  log4j.properties  templatetest-defaults-configmap.yaml  templatetest-deployment.yaml
tools/: bazel.rc  print-workspace-status.sh
